hphp/hack/test/typecheck/lambda/variadics/variadic_not_indexed.php.exp
File "variadic_not_indexed.php", line 16, characters 35-37:
You are trying to access the member foo but this is not an object, it is a varray (Typing[4062])
  File "variadic_not_indexed.php", line 16, characters 23-24:
  Check this out
File "variadic_not_indexed.php", line 17, characters 37-39:
You are trying to access the member foo but this is not an object, it is a varray (Typing[4062])
  File "variadic_not_indexed.php", line 17, characters 25-26:
  Check this out
File "variadic_not_indexed.php", line 19, characters 29-31:
You are trying to access the member foo but this is not an object, it is a varray (Typing[4062])
  File "variadic_not_indexed.php", line 19, characters 17-18:
  Check this out
File "variadic_not_indexed.php", line 20, characters 31-33:
You are trying to access the member foo but this is not an object, it is a varray (Typing[4062])
  File "variadic_not_indexed.php", line 20, characters 19-20:
  Check this out
